Week-6: revised the notebook and Week_6_Ollama

--- a/tutorial/LLM+Langchain/Week-6/notebook.ipynb
+++ b/tutorial/LLM+Langchain/Week-6/notebook.ipynb
@@ -2,6 +2,34 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "98fd4059-41d6-47fb-a83d-aa8fb33cdf38",
+   "metadata": {},
+   "source": [
+    "# 🎯 學習引導（Learning Guide）\n",
+    "\n",
+    "## 📖 本章學完你將能學會什麼：\n",
+    "- 了解 **語音轉文字（Speech to Text, STT）** 的原理與應用場景，如字幕生成、會議記錄、語音助理。  \n",
+    "- 熟悉 OpenAI 的 **Whisper 模型** 架構與使用方法，能正確設定 `model`、`language`、`prompt` 等參數。  \n",
+    "- 能夠使用 Python 與 OpenAI API 進行 **音訊上傳與批次轉錄（Batch Transcription）**。  \n",
+    "- 學會如何透過 **串流模式（Streaming Mode）** 即時獲取轉錄結果。  \n",
+    "- 了解 Whisper 模型在不同任務（Transcribe / Translate）下的差異與適用情境。  \n",
+    "- 理解 **Prompt 對語音辨識準確度的影響**，並能設計上下文提示（Context Prompt）。  \n",
+    "- 熟悉 **文字轉語音（Text to Speech, TTS）** 的應用邏輯與聲音控制要素（語氣、口音、語速、音色）。  \n",
+    "- 掌握 Python 中 **TTS API 的串接與音檔播放方法**（含 pydub、pygame、pyaudio 實作）。  \n",
+    "- 能實作出一個「**語音自助點飲料系統**」，串接 STT → LLM → TTS 的完整流程。\n",
+    "\n",
+    "---\n",
+    "\n",
+    "## 📘 最終你將具備的能力：\n",
+    "- 💡 **實作能力**：能夠開發出能錄音、轉錄、語音回覆的 Python 系統。  \n",
+    "- 🧠 **理解力**：能清楚解釋 STT 與 TTS 的技術差異與模型特性。  \n",
+    "- 🔧 **整合力**：可將 Whisper、LangChain、TTS 等 API 串成完整應用流程。  \n",
+    "- 🗣️ **應用力**：能設計各種語音互動應用（如客服助理、有聲書、自助點餐系統）。  \n",
+    "- 🚀 **延伸力**：能思考如何將語音模型與其他 AI 模組（RAG、Agent、Ollama）結合，打造更進階的智慧應用。 \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "4e9bd1a7-ba1e-491e-b83e-a31ac4dd06d9",
    "metadata": {},
    "source": [
@@ -1064,7 +1092,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "8e08088a-d765-48bf-8354-00e631b359d2",
    "metadata": {},
    "outputs": [],
@@ -1084,19 +1112,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "36f0ebdb-bc99-4a66-9ac1-34a3e9308b56",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\Ling\\miniconda3\\envs\\aicg\\lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import os\n",
     "from textwrap import dedent\n",
@@ -1169,7 +1188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "id": "68478b3c-25a2-4ddf-b566-a59be9476f55",
    "metadata": {},
    "outputs": [],
@@ -1200,7 +1219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": null,
    "id": "5d81447a-54e2-48c0-8377-ec4207ea973c",
    "metadata": {},
    "outputs": [],
@@ -1239,21 +1258,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "id": "8c278420-1689-4725-baf4-578fc12bc57f",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Order(names=[Drink(name='冬瓜檸檬', ice_level='正常冰', sugar_level='少糖'), Drink(name='珍珠蜂蜜鮮奶普洱', ice_level='正常冰', sugar_level='少糖')])"
-      ]
-     },
-     "execution_count": 26,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "extraction_pipeline.invoke({\"query\": \"我要一杯冬瓜檸檬和一杯珍珠蜂蜜鮮奶普洱\"})"
    ]
@@ -1268,7 +1276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "eb90e57f-b7c1-46bf-9531-dc42d870f970",
    "metadata": {},
    "outputs": [],
@@ -1296,21 +1304,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": null,
    "id": "e6721362-e5ba-4469-a38c-eb69b768a0bf",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Order(names=[Drink(name='珍珠蜂蜜鮮奶普洱', ice_level='正常冰', sugar_level='少糖'), Drink(name='茶凍奶綠', ice_level='少冰', sugar_level='微糖')])"
-      ]
-     },
-     "execution_count": 36,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "extraction_pipeline.invoke({\"query\": \"我要一本漫畫\"})"
    ]
@@ -1331,7 +1328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": null,
    "id": "13a63724-dcc3-48bb-9fd3-7cbe0a2f6815",
    "metadata": {},
    "outputs": [],
@@ -1369,63 +1366,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": null,
    "id": "ea2b3740-6f45-48e7-9669-f09d0bef8f5f",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Order(relevant=False, names=None)"
-      ]
-     },
-     "execution_count": 44,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "extraction_pipeline.invoke({\"query\": \"我要一本漫畫\"})\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": null,
    "id": "13264cf8-92e6-4c10-85c3-bdf728b3d682",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Order(relevant=False, names=None)"
-      ]
-     },
-     "execution_count": 45,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "extraction_pipeline.invoke({\"query\": \"我要一杯啤酒\"})\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": null,
    "id": "770601d1-b8bd-43f7-97ce-7665d74f0b73",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Order(relevant=True, names=[Drink(name='冬瓜檸檬', ice_level='去冰', sugar_level='微糖'), Drink(name='嚴選高山茶', ice_level='微冰', sugar_level='無糖')])"
-      ]
-     },
-     "execution_count": 46,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "extraction_pipeline.invoke({\"query\": \"我要一杯冬瓜檸檬和一杯嚴選高山茶。冬瓜檸檬微糖去冰，高山茶無糖微冰\"})"
    ]
@@ -1786,40 +1750,31 @@
    "id": "45ec0b23-08c6-4fcc-946d-36ee03b5075e",
    "metadata": {},
    "source": [
-    "# Ollama\n",
+    "# Ollama 概論\n",
     "\n",
-    "使用開源的優勢:\n",
+    "Ollama 是一個框架/工具，用於在本地端運行和管理開源大型語言模型（LLM）。它極大地簡化了在個人電腦上部署模型（例如 Llama 2、Mistral 等）的過程。\n",
     "\n",
-    "- 機敏資料\n",
-    "- 由於API都有Censorship，所以開源另一個主戰場是NSFW內容生成\n",
+    "使用開源的優勢評估:\n",
+    "\n",
+    "機敏資料 (Sensitive Data)\n",
+    "\n",
+    ">- 當你在本地端使用 Ollama 運行開源模型時，你的資料不會離開你的電腦（除非你主動將模型輸出發送到外部服務）。這與使用商業 API（如 OpenAI、Google Gemini）不同，後者的輸入資料會傳輸到服務提供商的伺服器進行處理。對於處理機密、敏感或受法規管制的資料（例如醫療記錄、專利資訊、商業機密等），本地運行是確保資料隱私和安全的關鍵優勢。\n",
+    "\n",
+    "無內容審查 (uncensored)\n",
+    "\n",
+    ">- Censorship/內容限制： 商業 API 服務提供商（OpenAI, Google, Anthropic 等）會在其服務條款中嚴格禁止生成特定類型的內容，包括但不限於：非法內容、仇恨言論、暴力內容、露骨的色情內容 (NSFW) 等。這是由於法律、道德和品牌聲譽的考量。\n",
+    "\n",
+    ">- 開源模型： 開源社群訓練和發佈的模型有許多是缺乏或設計繞過這些嚴格安全層的（即它們的「護欄」較弱或可調節）。因此，對於需要生成受商業 API 限制的內容（包括 NSFW、爭議性、或繞過倫理限制的內容）的使用者來說，這些**未經審查（uncensored）或調整過（fine-tuned）**的開源模型確實成為一個重要的使用場景。\n",
     "\n",
     "OpenAI 預告在今年12月，ChatGPT文字上可以產生NFSW內容"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": null,
    "id": "0020b5ba-c7cc-48f3-adb1-a074c04abe16",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "\n",
-       "<div style=\"display: flex; justify-content: space-around;\">\n",
-       "    <div>\n",
-       "        <img src=\"Sam Altman.png\" height=\"900\" width=\"600\" />\n",
-       "    </div>\n",
-       "</div>\n"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "from IPython.display import display, HTML\n",
     "\n",
@@ -1837,15 +1792,13 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "7ea87747-33ae-4c4f-bd86-1cd40fb12ca8",
+   "cell_type": "markdown",
+   "id": "8f305e0f-3789-452d-a110-96563c3f5281",
    "metadata": {},
-   "outputs": [],
    "source": [
     "This package enables you using open-source LLM with ease.\n",
     "\n",
-    "We borrow the content from last week\n",
+    "## Linux系統上安裝\n",
     "\n",
     "https://medium.com/@abonia/running-ollama-in-google-colab-free-tier-545609258453\n",
     "\n",
@@ -1853,7 +1806,14 @@
     "- ollama serve &\n",
     "- ollama pull llama3:8b\n",
     "- ollama pull dolphin-llama3:8b\n",
-    "- ollama pull huihui_ai/qwen2.5-abliterate:14b"
+    "- ollama pull huihui_ai/qwen2.5-abliterate:14b\n",
+    "\n",
+    "** 還沒真實測是過\n",
+    "\n",
+    "## Windows\n",
+    "\n",
+    "- 下載 & 安裝\n",
+    "- "
    ]
   },
   {
@@ -1868,151 +1828,141 @@
   },
   {
    "cell_type": "markdown",
-   "id": "52511b57-7779-4db4-8e8e-dd9d0071f50e",
+   "id": "a4ab7ad3-37ef-4eee-9bad-e7dad7068dfc",
    "metadata": {},
    "source": [
-    "In Colab"
+    "## 我們下載了兩個Ollama，差異在哪裡?\n",
+    "\n",
+    "### 🖥️ **ollama.exe（獨立安裝程式 / 下載版）**\n",
+    "\n",
+    "當你從官方的 [Ollama 網站](https://ollama.com/download) 下載 **`ollama.exe`** 時，  \n",
+    "你得到的是 **Ollama 的核心執行環境** —— 也就是實際在本機上執行模型的引擎。\n",
+    "\n",
+    "✅ 內容包含：\n",
+    "\n",
+    "- Ollama 伺服器（背景執行程序）  \n",
+    "- Ollama 命令列介面（CLI）  \n",
+    "- GPU / CPU 整合  \n",
+    "- 本地模型管理（下載、快取、提供模型服務）\n",
+    "\n",
+    "💡 若你想在自己的電腦上實際執行模型，這個版本是 **必要的**。\n",
+    "\n",
+    "---\n",
+    "\n",
+    "### 🐍 **pip install ollama（Python 套件）**\n",
+    "\n",
+    "Python 套件 **不包含執行環境** —— 它只是用來與已啟動的 Ollama 伺服器互動的 **用戶端函式庫**。\n",
+    "\n",
+    "✅ 它能讓你：\n",
+    "\n",
+    "- 向本地的 Ollama API（`http://localhost:11434`）發送請求  \n",
+    "- 從 Python 執行並串流模型回應  \n",
+    "- 在 Python 腳本或 Notebook 中使用 Ollama\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f89b5037-ba65-4dac-bf0f-c4d43daeb732",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# !pip install colab-xterm\n",
-    "# %load_ext colabxterm"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a04cc1ad-5440-4e65-bc38-07d2139afa37",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# %xterm"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "3fd597a5-1f65-4b5d-935d-5bc97fb2ad0a",
+   "id": "4a26731a-5821-47a4-a3a7-d9c8a7a1ee5d",
    "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
     "\n",
-    "from torch import cuda\n",
-    "from langchain.prompts import PromptTemplate, HumanMessagePromptTemplate, ChatPromptTemplate, SystemMessagePromptTemplate\n",
-    "from langchain_core.prompts.image import ImagePromptTemplate\n",
-    "from langchain_core.output_parsers import StrOutputParser\n",
-    "from langchain.text_splitter import RecursiveCharacterTextSplitter\n",
-    "from langchain_core.runnables import Runnable, chain\n",
-    "\n",
-    "from src.io.path_definition import get_project_dir\n",
-    "\n",
-    "\n",
-    "def build_standard_chat_prompt_template(kwargs):\n",
-    "    messages = []\n",
-    "\n",
-    "    if 'system' in kwargs:\n",
-    "        content = kwargs.get('system')\n",
-    "\n",
-    "        # allow list of prompts for multimodal\n",
-    "        if isinstance(content, list):\n",
-    "            prompts = [PromptTemplate(**c) for c in content]\n",
-    "        else:\n",
-    "            prompts = [PromptTemplate(**content)]\n",
-    "\n",
-    "        message = SystemMessagePromptTemplate(prompt=prompts)\n",
-    "        messages.append(message)\n",
-    "\n",
-    "    if 'human' in kwargs:\n",
-    "        content = kwargs.get('human')\n",
-    "\n",
-    "        # allow list of prompts for multimodal\n",
-    "        if isinstance(content, list):\n",
-    "            prompts = []\n",
-    "            for c in content:\n",
-    "                if c.get(\"type\") == \"image\":\n",
-    "                    prompts.append(ImagePromptTemplate(**c))\n",
-    "                else:\n",
-    "                    prompts.append(PromptTemplate(**c))\n",
-    "        else:\n",
-    "            if content.get(\"type\") == \"image\":\n",
-    "                prompts = [ImagePromptTemplate(**content)]\n",
-    "            else:\n",
-    "                prompts = [PromptTemplate(**content)]\n",
-    "\n",
-    "        message = HumanMessagePromptTemplate(prompt=prompts)\n",
-    "        messages.append(message)\n",
-    "\n",
-    "    chat_prompt_template = ChatPromptTemplate.from_messages(messages)\n",
-    "    \n",
-    "    return chat_prompt_template\n"
+    "os.chdir(\"../../../\")"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "888775f5-e632-41c5-99cf-406d70ee63b7",
+   "id": "b3ec1424-e3ba-4bc1-a0b5-eb80209af8d1",
    "metadata": {},
    "source": [
-    "Ollama 使用模型跟 OpenAI API 沒有區別\n",
-    "\n",
-    "但建議架設在有強大算力的機器上，並且使用Langserve呼叫服務，來減輕本地的算力需求。"
+    "## Cloud API Access"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7e3d7f97-f573-4350-a946-4a6a8af963df",
+   "id": "c099b3a2-0f02-4231-8009-60d0e3db937b",
    "metadata": {},
    "outputs": [],
    "source": [
-    "system_template = \"You are a helpful AI assistant with excellent writing skill\""
+    "from ollama import Client\n",
+    "\n",
+    "from src.initialization import credential_init\n",
+    "\n",
+    "credential_init()\n",
+    "\n",
+    "client = Client(\n",
+    "    host=\"https://ollama.com\",\n",
+    "    headers={'Authorization': 'Bearer ' + os.environ.get('OLLAMA_API_KEY')}\n",
+    ")\n",
+    "\n",
+    "messages = [\n",
+    "  {\n",
+    "    'role': 'user',\n",
+    "    'content': '天空為何是藍色的?',\n",
+    "  },\n",
+    "]\n",
+    "\n",
+    "for part in client.chat('gpt-oss:120b', messages=messages, stream=True):\n",
+    "    print(part['message']['content'], end='', flush=True)\n",
+    "\n",
+    "\n",
+    "# 下載模型\n",
+    "# client.pull('gpt-oss:20b')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fa5f487c-dc8d-499e-a313-a07194164007",
+   "metadata": {},
+   "source": [
+    "## 搭配 Langchain 使用"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "79c5f546-eccf-4a24-a3e9-0229a454d529",
+   "id": "c1581fc5-0d1d-48a2-9215-ea3c070f6214",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from tqdm import tqdm\n",
+    "from langchain_community.chat_models.ollama import ChatOllama\n",
     "\n",
-    "from langchain_ollama import ChatOllama\n",
-    "\n",
-    "stop_token_ids = None\n",
-    "model_id = \"dolphin-llama3:8b\"\n",
-    "\n",
-    "device = f\"cuda:{cuda.current_device()}\" if cuda.is_available() else 'cpu'\n",
-    "\n",
-    "model = ChatOllama(model=model_id, temperature=0)\n",
-    "\n",
-    "summary_prompt_template = build_summary_prompt_template()\n",
-    "\n",
-    "summary_pipeline = summary_prompt_template | model | StrOutputParser()\n",
-    "\n",
-    "text_as_list = []\n",
-    "for document in tqdm(documents):\n",
-    "    content = summary_pipeline.invoke({\"text\": document.page_content})\n",
-    "    text_as_list.append(content)\n",
-    "\n",
-    "final_text = \"\\n\".join(text_as_list)"
+    "model_ollama = ChatOllama(model='gpt-oss:120b', base_url='https://ollama.com',\n",
+    "                          headers={'Authorization': 'Bearer ' + os.environ.get('OLLAMA_API_KEY')})\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "05a034f8-82cb-4784-ad35-f6d10fe01c82",
+   "id": "efff384f-c121-45b3-b791-8af5d04fe068",
    "metadata": {},
    "outputs": [],
    "source": [
-    "summary_pipeline.invoke({\"text\": final_text})"
+    "model_ollama.invoke(\"天空為何是藍色的?\")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b264cbad-173c-45c8-b2aa-58ff8b4c4e15",
+   "metadata": {},
+   "source": [
+    "## 下載模型\n",
+    "\n",
+    "建議直接在CLI介面使用\n",
+    "\n",
+    "接下來我們會在Colab上看如何使用本地模型"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cc2699ea-0fac-4c9c-98ee-f8f9b863eb48",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
