update the initialization.py for Ollama API KEY and the Week-7 notebook

--- a/tutorial/LLM+Langchain/Week-7/notebook.ipynb
+++ b/tutorial/LLM+Langchain/Week-7/notebook.ipynb
@@ -143,7 +143,7 @@
     "\n",
     "        - Image-1 等模型可能會對過於明顯的 NSFW 提示詞進行攔截。若想生成 NSFW 的內容，建議可以參考開源社群，例如 TensorArt。\n",
     "\n",
-    "### 2. How to make it an LCEL?"
+    "### 2. 如何融入LCEL裡?"
    ]
   },
   {
@@ -817,7 +817,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "26638f8e-95ba-44fd-b046-877dfaca93a5",
    "metadata": {
     "tags": []
@@ -841,13 +841,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "de00d300-5214-4b61-b69d-3e4fb9a7b407",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\Ling\\miniconda3\\envs\\aicg\\lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<Experiment: artifact_location='mlflow-artifacts:/211253271335259748', creation_time=1761307703813, experiment_id='211253271335259748', last_update_time=1761307703813, lifecycle_stage='active', name='Week-7', tags={'mlflow.experimentKind': 'custom_model_development'}>"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import mlflow\n",
     "from langchain_community.callbacks import MlflowCallbackHandler\n",
+    "from langchain_openai import ChatOpenAI\n",
+    "\n",
+    "from src.initialization import credential_init\n",
+    "\n",
+    "credential_init()\n",
     "\n",
     "experiment = \"Week-7\"\n",
     "uri = \"http://127.0.0.1:8080\"\n",
@@ -855,41 +879,48 @@
     "mlflow.set_tracking_uri(uri=uri)\n",
     "\n",
     "# Start or get an MLflow run explicitly\n",
-    "mlflow.set_experiment(experiment)\n",
-    "\n",
-    "run = mlflow.start_run(run_name=\"react-agent\")\n",
-    "\n",
-    "mlflow_cb = MlflowCallbackHandler(\n",
-    "        experiment=experiment,\n",
-    "        run_id=run.info.run_id,\n",
-    "        tracking_uri=uri,\n",
-    "    )"
+    "mlflow.set_experiment(experiment)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "d131ad1b-c2a1-494b-ad17-074e969c9ddc",
-   "metadata": {
-    "tags": []
-   },
+   "execution_count": 3,
+   "id": "58b51602-d151-4855-8eeb-e5c669b1897d",
+   "metadata": {},
    "outputs": [],
    "source": [
-    "from langchain_openai import ChatOpenAI\n",
-    "from src.initialization import credential_init\n",
-    "\n",
-    "credential_init()\n",
-    "\n",
-    "\n",
     "class CleanMlflowCallbackHandler(MlflowCallbackHandler):\n",
+    "\n",
+    "    def __init__(self, experiment, run_id, tracking_uri, name=\"CleanMLflow\"):\n",
+    "        super().__init__(experiment=experiment, run_id=run_id, tracking_uri=tracking_uri, name=name)\n",
+    "    \n",
     "    def on_llm_new_token(self, token: str, **kwargs):\n",
     "        # Suppress per-token logging to MLflow\n",
     "        # 若你不這麼做的話\n",
     "        # 1. artifacts 資料夾會被成千上萬個小 JSON 檔案塞滿。\n",
-    "        #    The artifacts directory becomes cluttered with thousands of small JSON files.\n",
     "        # 2. 更嚴重的是，過多的逐 token I/O 會大幅拖慢執行速度。\n",
-    "        #    More importantly, excessive token-level I/O can significantly slow down runs.\n",
-    "        return None\n",
+    "        return None"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "d131ad1b-c2a1-494b-ad17-074e969c9ddc",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Could not import spacy python package. Please install it with `pip install spacy`.\n",
+      "Could not import textstat python package. Please install it with `pip install textstat`.\n"
+     ]
+    }
+   ],
+   "source": [
+    "run = mlflow.start_run(run_name=\"react-agent\")\n",
     "\n",
     "# then use this handler instead of the default one\n",
     "mlflow_cb_model = CleanMlflowCallbackHandler(\n",
@@ -901,16 +932,26 @@
     "\n",
     "model = ChatOpenAI(openai_api_key=os.environ['OPENAI_API_KEY'],\n",
     "                   model_name=\"gpt-4o\", temperature=0, \n",
-    "                   callbacks=[mlflow_cb_model]\n",
+    "                   callbacks=[mlflow_cb_model],\n",
+    "                   name=\"my_model\"\n",
     "                  )"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "cc06ffce-e3e9-41ad-9f7b-585a5101391d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Could not import spacy python package. Please install it with `pip install spacy`.\n",
+      "Could not import textstat python package. Please install it with `pip install textstat`.\n"
+     ]
+    }
+   ],
    "source": [
     "from langchain.prompts import PromptTemplate\n",
     "from langchain.agents import AgentExecutor, create_react_agent\n",
@@ -926,6 +967,11 @@
     ")\n",
     "\n",
     "class DebugMlflowCallbackHandler(MlflowCallbackHandler):\n",
+    "    \n",
+    "    def __init__(self, experiment, run_id, tracking_uri, name=\"CleanMLflow\"):\n",
+    "        super().__init__(experiment=experiment, run_id=run_id, tracking_uri=tracking_uri)\n",
+    "        self.name = name\n",
+    "    \n",
     "    def on_chain_error(self, error, **kwargs):\n",
     "        print(f\"Chain error: {error}\")\n",
     "        super().on_chain_error(error, **kwargs)\n",
@@ -942,17 +988,88 @@
     ")\n",
     "\n",
     "\n",
-    "agent_executor = AgentExecutor(agent=zero_shot_agent, tools=[], verbose=True, callbacks=[mlflow_cb_agent])"
+    "agent_executor = AgentExecutor(agent=zero_shot_agent, tools=[], verbose=True, callbacks=[mlflow_cb_agent], name='my_agent')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "ba8cc22f-e8fc-4a23-bc0f-b1918bdb90b2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Error in DebugMlflowCallbackHandler.on_chain_start callback: AttributeError(\"'NoneType' object has no attribute 'items'\")\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "\n",
+      "\u001b[1m> Entering new my_agent chain...\u001b[0m\n",
+      "\u001b[32;1m\u001b[1;3mTo calculate the area of a circle, we use the formula:\n",
+      "\n",
+      "\\[ \\text{Area} = \\pi \\times r^2 \\]\n",
+      "\n",
+      "where \\( r \\) is the radius of the circle.\n",
+      "\n",
+      "Given that the radius \\( r = 10.923 \\) mm, we can substitute this value into the formula.\n",
+      "\n",
+      "Action: Calculate the area using the formula\n",
+      "\n",
+      "Action Input: \\( \\pi \\times (10.923)^2 \\)\n",
+      "\u001b[0mCalculate the area using the formula is not a valid tool, try one of [].\u001b[32;1m\u001b[1;3mI need to manually calculate the area of the circle using the given formula.\n",
+      "\n",
+      "Given:\n",
+      "- Radius \\( r = 10.923 \\) mm\n",
+      "\n",
+      "The formula for the area of a circle is:\n",
+      "\\[ \\text{Area} = \\pi \\times r^2 \\]\n",
+      "\n",
+      "Substitute the given radius into the formula:\n",
+      "\\[ \\text{Area} = \\pi \\times (10.923)^2 \\]\n",
+      "\n",
+      "Calculate \\( (10.923)^2 \\):\n",
+      "\\[ (10.923)^2 = 119.349729 \\]\n",
+      "\n",
+      "Now, multiply by \\( \\pi \\) (approximately 3.14159):\n",
+      "\\[ \\text{Area} \\approx 3.14159 \\times 119.349729 \\]\n",
+      "\n",
+      "\\[ \\text{Area} \\approx 374.860 \\, \\text{mm}^2 \\]\n",
+      "\n",
+      "Final Answer: The area of the circle is approximately 374.860 mm².\u001b[0m\n",
+      "\n",
+      "\u001b[1m> Finished chain.\u001b[0m\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'input': 'Please calculate the area of a circle that has a radius of 10.923mm',\n",
+       " 'output': 'The area of the circle is approximately 374.860 mm².'}"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "agent_executor.invoke({\"input\": \"Please calculate the area of a circle that has a radius of 10.923mm\"})"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ba8cc22f-e8fc-4a23-bc0f-b1918bdb90b2",
+   "id": "fa74eeef-86f2-4e81-a89d-80f796a46c12",
    "metadata": {},
    "outputs": [],
    "source": [
-    "agent_executor.invoke({\"input\": \"Please calculate the area of a circle that has a radius of 10.923mm\"})"
+    "mlflow.end_run()"
    ]
   },
   {
@@ -960,7 +1077,19 @@
    "id": "6ac67459-977c-4055-805e-1c710dddc85f",
    "metadata": {},
    "source": [
+    "## 調動Tools\n",
+    "\n",
     "我們知道LLM不是讓你算數學用的。整數的加減法可能可以，"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "932d0eb0-3f19-4614-a683-7062457010f1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "run = mlflow.start_run(run_name=\"react-agent-with-tool\")"
    ]
   },
   {
@@ -1036,11 +1165,30 @@
     "          \"human\": {\"template\": human_template,\n",
     "                    \"input_variable\": [\"query\"]}}\n",
     "\n",
-    "chat_prompt = build_standard_chat_prompt_template(input_)\n",
+    "code_chat_prompt_template = build_standard_chat_prompt_template(input_)\n",
     "\n",
-    "code_generation = chat_prompt|model|StrOutputParser()\n",
+    "\n",
+    "# then use this handler instead of the default one\n",
+    "mlflow_cb_model = CleanMlflowCallbackHandler(\n",
+    "    experiment=experiment,\n",
+    "    run_id=run.info.run_id,\n",
+    "    tracking_uri=uri,\n",
+    ")\n",
+    "\n",
+    "model_agent = ChatOpenAI(openai_api_key=os.environ['OPENAI_API_KEY'],\n",
+    "                         model_name=\"gpt-4o\", temperature=0, \n",
+    "                         callbacks=[mlflow_cb_model]\n",
+    "                        )\n",
+    "\n",
+    "model_coder = ChatOpenAI(openai_api_key=os.environ['OPENAI_API_KEY'],\n",
+    "                         model_name=\"gpt-4o-mini\", temperature=0, \n",
+    "                         callbacks=[mlflow_cb_model]\n",
+    "                        )\n",
+    "\n",
+    "code_generation = code_chat_prompt_template|model_coder|StrOutputParser()\n",
     "\n",
     "code_pipeline = code_generation|code_execution\n",
+    "\n",
     "\n",
     "class MathTool(BaseTool):\n",
     "    name:str = \"Math calculator\"\n",
@@ -1064,10 +1212,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from langchain.agents import AgentExecutor, create_react_agent\n",
+    "\n",
+    "from src.agent.react_zero_shot import prompt_template as zero_shot_prompt_template\n",
+    "\n",
+    "\n",
+    "prompt = PromptTemplate(template=zero_shot_prompt_template)\n",
+    "\n",
     "tools = [MathTool()]\n",
     "\n",
     "zero_shot_agent = create_react_agent(\n",
-    "    llm=model, ## llm是 Agent的思考中樞，這個llm會決定agent總體上的大致表現，建議越強越好\n",
+    "    llm=model_agent, ## llm是 Agent的思考中樞，這個llm會決定agent總體上的大致表現，建議越強越好\n",
     "    tools=tools,\n",
     "    prompt=prompt,\n",
     ")\n",
@@ -1088,10 +1243,22 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a3803271-ce2b-4e82-adb6-3ee933423a7f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mlflow.end_run()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "b803df62-1a18-4c71-b36e-b326fa063698",
    "metadata": {},
    "source": [
+    "## WebSearch Tool\n",
+    "\n",
     "### 如何讓Tool接收複數的變數?\n",
     "\n",
     "利用之前學過的 Pydantic, 也可以用ResponseSchema."
@@ -1157,20 +1324,20 @@
     "        messages = [{\"role\": \"user\",\n",
     "                     \"content\": query}]\n",
     "\n",
-    "        response = client.chat.completions.create(\n",
-    "            model='gpt-4o-mini-search-preview',\n",
-    "            web_search_options={\"search_context_size\": 'medium',\n",
-    "                                \"user_location\": {\n",
-    "                                        \"type\": \"approximate\",\n",
-    "                                        \"approximate\": {\n",
-    "                                            \"country\": country_code,\n",
-    "                                        }\n",
-    "                                    },\n",
-    "                                },\n",
-    "            messages=messages\n",
-    "        )\n",
+    "        response = client.responses.create(\n",
+    "                    model=\"gpt-4o-mini\",\n",
+    "                    tools=[\n",
+    "                        {\"type\": \"web_search\",\n",
+    "                         \"user_location\":{\n",
+    "                             \"type\": \"approximate\",\n",
+    "                             \"country\": country_code,\n",
+    "                         },\n",
+    "                        \"seearch_context_size\": \"medium\"\n",
+    "                        }],\n",
+    "                    tool_choice=\"auto\",\n",
+    "                    input=query)\n",
     "        \n",
-    "        return response.choices[0].message.content\n",
+    "        return response.output_text\n",
     "    \n",
     "    def _arun(self, query: str):\n",
     "        raise NotImplementedError(\"This tool does not support async\")"
@@ -1434,16 +1601,7 @@
     "            return self.runnable.invoke(input_dict)\n",
     "\n",
     "    def _arun(self, query: str):\n",
-    "        raise NotImplementedError(\"This tool does not support async\")\n",
-    "\n",
-    "\n",
-    "# tool = ToolTemplate.create(\n",
-    "#     runnable=runnable,\n",
-    "#     name=\"EchoTool\",\n",
-    "#     description=\"This tool repeats back your input. Input format: {input_format_instruction}\",\n",
-    "#     input_format_instruction=\"Just provide plain text.\",\n",
-    "#     input_parser=None  # no structured input\n",
-    "# )"
+    "        raise NotImplementedError(\"This tool does not support async\")"
    ]
   },
   {
