--- a/tutorial/LLM+Langchain/Week-1/notebook.ipynb
+++ b/tutorial/LLM+Langchain/Week-1/notebook.ipynb
@@ -2048,7 +2048,7 @@
    "id": "f734a5e1-58b2-4e0c-a294-9db0d554cdb5",
    "metadata": {},
    "source": [
-    "### 2. Initializing BM25Retriever (初始化 BM25Retriever):\n",
+    "### 2. 初始化 BM25Retriever:\n",
     "\n",
     "- BM25Retriever.from_documents initializes an instance of BM25Retriever using the documents list.\n",
     "- Parameters:\n",
