--- a/tutorial/LLM+Langchain/Week-4/notebook.ipynb
+++ b/tutorial/LLM+Langchain/Week-4/notebook.ipynb
@@ -2428,7 +2428,7 @@
    "id": "a0ebdaf7-e0cb-4ea4-83bb-3a78a850c0c8",
    "metadata": {},
    "source": [
-    "### Fan Wiki\n",
+    "### Fan Wiki: Titan\n",
     "\n",
     "萬機之神歐姆尼賽亞的化身\n",
     "\n",
@@ -2437,7 +2437,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "c618afff-8453-43bf-97b3-d485adc4d848",
    "metadata": {},
    "outputs": [],
@@ -2466,8 +2466,13 @@
     "    - Any <style> tags in the HTML are removed to extract only textual content.\n",
     "    - The extracted text is cleaned by removing extra whitespace and empty lines.\n",
     "    \"\"\"\n",
+    "    headers = {\n",
+    "    \"User-Agent\": \"Mozilla/5.0 (compatible; MyTest/1.0)\",\n",
+    "    \"Accept\": \"text/html,application/json\"\n",
+    "    }\n",
+    "    \n",
     "    # Send a GET request to the URL\n",
-    "    response = requests.get(url)\n",
+    "    response = requests.get(url, headers=headers)\n",
     "\n",
     "    # Get the content of the response\n",
     "    html_content = response.text\n",
@@ -2500,30 +2505,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "328ef7c0-9650-476e-abf4-fa97941e3304",
    "metadata": {},
    "outputs": [],
    "source": [
     "cleaned_text = parsing_process(url)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "de949f37-eac9-4934-b5d3-8658de5a6c90",
-   "metadata": {},
-   "source": [
-    "#### 基本問題"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0a2f9843-1759-4919-8297-2b83eb556cb3",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "query = \"幫我找出所有忠誠派泰坦級別\""
    ]
   },
   {
@@ -2625,7 +2612,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.18"
+   "version": "3.10.19"
   }
  },
  "nbformat": 4,
