--- a/tutorial/LLM+Langchain/Week-5/notebook_v2.ipynb
+++ b/tutorial/LLM+Langchain/Week-5/notebook_v2.ipynb
@@ -20,11 +20,9 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "3a82570c-339f-4a7d-ae48-8e16e69ae8a2",
+   "cell_type": "markdown",
+   "id": "425d5eb7-2d12-4e5b-b824-2c9bf5d657ce",
    "metadata": {},
-   "outputs": [],
    "source": [
     "Image Captioning：指的是模型根據圖片內容，自動生成一段客觀描述，例如「一隻黑色的狗在草地上奔跑」。\n",
     "\n",
@@ -471,7 +469,6 @@
     "\n",
     "os.chdir(\"../../../\")\n",
     "\n",
-    "\n",
     "image_dir = os.path.join(\"tutorial\", \"LLM+Langchain\", \"Week-5\", \"image_source\")"
    ]
   },
@@ -552,6 +549,8 @@
     "Focus exclusively on psychological and aesthetic interpretations related to the images themselves.\n",
     "\n",
     "The output language should be in traditional Chinese (繁體中文).\n",
+    "\n",
+    "Generate the personality profile based on the images:\n",
     "\"\"\")}"
    ]
   },
@@ -1005,7 +1004,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.18"
+   "version": "3.10.19"
   }
  },
  "nbformat": 4,
