--- a/tutorial/LLM+Langchain/Week-6/notebook.ipynb
+++ b/tutorial/LLM+Langchain/Week-6/notebook.ipynb
@@ -451,6 +451,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "b8fd9bbd-1dd4-4c9c-afb2-aaf24892f0bc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!pip install sounddevice"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "6a45099b-b8cd-4223-8d24-d5cce1d6023b",
    "metadata": {},
    "outputs": [],
@@ -458,10 +468,10 @@
     "import io\n",
     "\n",
     "import numpy as np\n",
+    "import sounddevice as sd\n",
     "from pydub import AudioSegment\n",
     "\n",
     "# AudioSegment.converter = r\"tutorial\\LLM+Langchain\\Week-6\\ffmpeg-essentials_build\\bin\\ffmpeg.exe\"\n",
-    "\n",
     "\n",
     "DURATION = 5  # seconds\n",
     "FS = 44100    # sample rate\n",
@@ -745,8 +755,33 @@
     "    file=mp3_io,\n",
     "    response_format=\"text\",\n",
     ")\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "be460a95-59f9-4d0a-9736-068657e770cb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "audio_file= open(\"tutorial/LLM+Langchain/Week-6/孩子上網，小心上當.mp3\", \"rb\")\n",
     "\n",
-    "print(output.text)"
+    "output = client.audio.translations.create(\n",
+    "    model=\"whisper-1\", \n",
+    "    file=audio_file,\n",
+    "    response_format=\"text\",\n",
+    ")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4be3987c-4898-467a-8f4c-864b86c02286",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "output"
    ]
   },
   {
@@ -797,6 +832,16 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "759b0617-0012-43ff-b13b-f4ae1c8f5ad7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sound"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "f0ca4eaa-01cf-43f4-8de8-8e2a4d8be536",
    "metadata": {},
@@ -811,8 +856,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from playsound import playsound\n",
-    "\n",
     "speech_file_path = os.path.join(\"tutorial/LLM+Langchain/Week-6/Sample.mp3\")\n",
     "\n",
     "response = client.audio.speech.create(\n",
@@ -911,9 +954,7 @@
     "\n",
     "** 開源社群臥虎藏龍\n",
     "\n",
-    "https://community.openai.com/t/streaming-from-text-to-speech-api/493784/29\n",
-    "\n",
-    "在整個音訊檔案還沒完全下載完畢之前，播放就已經開始了。"
+    "https://community.openai.com/t/streaming-from-text-to-speech-api/493784/29"
    ]
   },
   {
@@ -956,6 +997,7 @@
     "from time import sleep\n",
     "import wave\n",
     "import requests\n",
+    "\n",
     "import pyaudio\n",
     "\n",
     "# WAV: Uncompressed WAV audio, suitable for low-latency applications to avoid decoding overhead.\n",
@@ -1399,7 +1441,7 @@
    "id": "c32162fa-70fa-479d-b440-ecb2c3f6eac8",
    "metadata": {},
    "source": [
-    "透過這個方法，可以在一避免用戶搞些有的沒的。\n",
+    "透過這個方法，可以避免用戶搞些有的沒的。\n",
     "\n",
     "另一個選擇是使用Guardrails: 可以使用OpenAI Agent SDK，然後再輸入的地方加入一個檢查系統。"
    ]
@@ -1675,7 +1717,7 @@
     "\n",
     "response = requests.post(\n",
     "        \"http://localhost:8080/drinking_app/invoke\",\n",
-    "        json={'input': {\"query\": whisper_output}}\n",
+    "        json=payload\n",
     "    )"
    ]
   },
@@ -1813,7 +1855,7 @@
     "## Windows\n",
     "\n",
     "- 下載 & 安裝\n",
-    "- "
+    "- pip install ollama"
    ]
   },
   {
@@ -1981,7 +2023,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.18"
+   "version": "3.10.19"
   }
  },
  "nbformat": 4,
