--- a/tutorial/LLM+Langchain/Week-2/notebook.ipynb
+++ b/tutorial/LLM+Langchain/Week-2/notebook.ipynb
@@ -1143,7 +1143,7 @@
    "id": "52fe9b53-efa3-4550-adf3-8e062da4dccc",
    "metadata": {},
    "source": [
-    "### Challenge: 你可以使用method from_documents 來創立一個vectorstore嗎?"
+    "### 挑戰: 你可以使用method from_documents 來創立一個vectorstore嗎?"
    ]
   },
   {
@@ -2923,7 +2923,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.18"
+   "version": "3.10.19"
   }
  },
  "nbformat": 4,
